@@ -1,38 +1,27 @@
-/*
- * Copyright 2000-2013 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ui.treeStructure.treetable;
 
+import com.intellij.ui.TableUtil;
+import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.table.JBTable;
+import com.intellij.util.ui.accessibility.ScreenReader;
+import com.intellij.util.ui.tree.TreeUtil;
+import org.jetbrains.annotations.NotNull;
 
 import javax.swing.*;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
+import javax.swing.plaf.UIResource;
 import javax.swing.tree.DefaultTreeSelectionModel;
 import javax.swing.tree.TreeCellRenderer;
 import javax.swing.tree.TreePath;
 import java.awt.*;
-import java.awt.event.KeyEvent;
+import java.awt.event.ActionEvent;
 import java.awt.event.MouseEvent;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
-import java.util.ArrayList;
-import java.util.EventObject;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 /**
  * This example shows how to create a simple JTreeTable component,
@@ -49,14 +38,58 @@ public class TreeTable extends JBTable {
   private TreeTableTree myTree;
   private TreeTableModel myTableModel;
   private PropertyChangeListener myTreeRowHeightPropertyListener;
+  // If a screen reader is present, it is better to let the left/right cursor keys
+  // be routed to the JTable, as opposed to expand/collapse tree nodes.
+  private boolean myProcessCursorKeys = !ScreenReader.isActive();
 
   public TreeTable(TreeTableModel treeTableModel) {
     super();
-
     setModel(treeTableModel);
+    new TreeAction("selectPreviousColumn", "selectParent");
+    new TreeAction("selectPreviousColumnExtendSelection", "selectParentExtendSelection");
+    new TreeAction("selectNextColumn", "selectChild");
+    new TreeAction("selectNextColumnExtendSelection", "selectChildExtendSelection");
   }
 
-  @SuppressWarnings({"MethodOverloadsMethodOfSuperclass"})
+  private final class TreeAction extends AbstractAction implements UIResource {
+    private final String actionId;
+    private final Action action;
+
+    private TreeAction(@NotNull String tableActionId, @NotNull String treeActionId) {
+      //noinspection HardCodedStringLiteral
+      super(tableActionId + " -> " + treeActionId);
+      actionId = treeActionId;
+      ActionMap map = getActionMap();
+      action = map.get(tableActionId);
+      if (!(action instanceof TreeAction)) {
+        map.put(tableActionId, this);
+      }
+    }
+
+    private JTree getTreeToPerformAction() {
+      JTree tree = !myProcessCursorKeys ? null : getTree();
+      if (tree == null || 1 != getSelectedRowCount()) return null;
+      if (!getColumnModel().getColumnSelectionAllowed()) return tree;
+      int column = getColumnModel().getSelectionModel().getAnchorSelectionIndex();
+      return 0 <= column && column < getColumnCount() && !isTreeColumn(column) ? null : tree;
+    }
+
+    @Override
+    public void actionPerformed(ActionEvent event) {
+      JTree tree = getTreeToPerformAction();
+      Action action = tree == null ? null : tree.getActionMap().get(actionId);
+      if (action == null) {
+        this.action.actionPerformed(event);
+      }
+      else {
+        action.actionPerformed(new ActionEvent(tree, ActionEvent.ACTION_PERFORMED, actionId));
+        int row = tree.getLeadSelectionRow();
+        getSelectionModel().setSelectionInterval(row, row);
+        TableUtil.scrollSelectionToVisible(TreeTable.this);
+      }
+    }
+  }
+
   public void setModel(TreeTableModel treeTableModel) {// Create the tree. It will be used as a renderer and editor.
     if (myTree != null) {
       myTree.removePropertyChangeListener(JTree.ROW_HEIGHT_PROPERTY, myTreeRowHeightPropertyListener);
@@ -64,6 +97,7 @@ public class TreeTable extends JBTable {
     myTree = new TreeTableTree(treeTableModel, this);
     setRowHeight(myTree.getRowHeight());
     myTreeRowHeightPropertyListener = new PropertyChangeListener() {
+      @Override
       public void propertyChange(PropertyChangeEvent evt) {
         int treeRowHeight = myTree.getRowHeight();
         if (treeRowHeight == getRowHeight()) return;
@@ -92,7 +126,7 @@ public class TreeTable extends JBTable {
 
     // And update the height of the trees row to match that of the table.
     if (myTree.getRowHeight() < 1) {
-      setRowHeight(18);  // Metal looks better like this.
+      setRowHeight(JBUIScale.scale(18));  // Metal looks better like this.
     }
     else {
       setRowHeight(getRowHeight());
@@ -129,6 +163,7 @@ public class TreeTable extends JBTable {
    * Since the tree is not actually in the component hierarchy it will
    * never receive this unless we forward it in this manner.
    */
+  @Override
   public void updateUI() {
     super.updateUI();
     if (myTree!= null) {
@@ -136,7 +171,6 @@ public class TreeTable extends JBTable {
     }
     // Use the tree's default foreground and background colors in the
     // table.
-    //noinspection HardCodedStringLiteral
     LookAndFeel.installColorsAndFont(this, "Tree.background", "Tree.foreground", "Tree.font");
   }
 
@@ -146,6 +180,7 @@ public class TreeTable extends JBTable {
    * is not the right thing to do for an editor. Returning -1 for the
    * editing row in this case, ensures the editor is never painted.
    */
+  @Override
   public int getEditingRow() {
     return editingColumn == -1 || isTreeColumn(editingColumn) ? -1 : editingRow;
   }
@@ -153,6 +188,7 @@ public class TreeTable extends JBTable {
   /**
    * Overridden to pass the new rowHeight to the tree.
    */
+  @Override
   public void setRowHeight(int rowHeight) {
     super.setRowHeight(rowHeight);
     if (myTree != null && myTree.getRowHeight() < rowHeight) {
@@ -167,35 +203,14 @@ public class TreeTable extends JBTable {
     return myTree;
   }
 
-  protected void processKeyEvent(KeyEvent e){
-    int keyCode = e.getKeyCode();
-    final int selColumn = columnModel.getSelectionModel().getAnchorSelectionIndex();
-    boolean treeHasFocus = selColumn == -1 || selColumn >= 0 && isTreeColumn(selColumn);
-    boolean oneRowSelected = getSelectedRowCount() == 1;
-    int rowToSelect = -1;
-    if(treeHasFocus && oneRowSelected && ((keyCode == KeyEvent.VK_LEFT) || (keyCode == KeyEvent.VK_RIGHT))){
-      TreePath selectionPath = myTree.getSelectionPath();
-      myTree._processKeyEvent(e);
-      if (myTree.isExpanded(selectionPath)) {
-        myTree.setSelectionPath(selectionPath);
-      } else if (keyCode == KeyEvent.VK_LEFT) {
-        rowToSelect = myTree.getRowForPath(myTree.getSelectionPath());
-        if (!getScrollableTracksViewportHeight()) {
-          int visibleYPosition = getVisibleRect().y;
-          final Rectangle cellRect = getCellRect(rowToSelect, 0, false);
-          int selectedRowYPosition = cellRect.y;
-          if (selectedRowYPosition < visibleYPosition) {
-            scrollRectToVisible(cellRect);
-          }
-        }
-      }
-    }
-    else{
-      super.processKeyEvent(e);
-    }
-    if (rowToSelect > -1) {
-      getSelectionModel().setSelectionInterval(rowToSelect, rowToSelect);
-    }
+  /**
+   * Enable or disable processing of left/right cursor keys to expand/collapse
+   * nodes in the tree column. Disabling these keys can be useful to improve
+   * accessibility support when the left/right cursor keys are better suited to
+   * navigate to the previous/next cell of a given row.
+   */
+  public void setProcessCursorKeys(boolean processCursorKeys) {
+    myProcessCursorKeys = processCursorKeys;
   }
 
   /**
@@ -208,7 +223,7 @@ public class TreeTable extends JBTable {
     /** Set to true when we are updating the ListSelectionModel. */
     protected boolean updatingListSelectionModel;
 
-    public ListToTreeSelectionModelWrapper() {
+    ListToTreeSelectionModelWrapper() {
       super();
       getListSelectionModel().addListSelectionListener(createListSelectionListener());
     }
@@ -223,22 +238,23 @@ public class TreeTable extends JBTable {
     }
 
     /**
-     * This is overriden to set <code>updatingListSelectionModel</code>
+     * This is overriden to set {@code updatingListSelectionModel}
      * and message super. This is the only place DefaultTreeSelectionModel
      * alters the ListSelectionModel.
      */
+    @Override
     public void resetRowSelection() {
       if (!updatingListSelectionModel) {
         updatingListSelectionModel = true;
         try {
-          Set<Integer> selectedRows = new HashSet<Integer>();
+          Set<Integer> selectedRows = new HashSet<>();
           int min = listSelectionModel.getMinSelectionIndex();
           int max = listSelectionModel.getMaxSelectionIndex();
 
           if (min != -1 && max != -1) {
             for (int counter = min; counter <= max; counter++) {
               if (listSelectionModel.isSelectedIndex(counter)) {
-                selectedRows.add(new Integer(counter));
+                selectedRows.add(Integer.valueOf(counter));
               }
             }
           }
@@ -246,8 +262,7 @@ public class TreeTable extends JBTable {
           super.resetRowSelection();
 
           listSelectionModel.clearSelection();
-          for (final Object selectedRow : selectedRows) {
-            Integer row = (Integer)selectedRow;
+          for (final Integer row : selectedRows) {
             listSelectionModel.addSelectionInterval(row.intValue(), row.intValue());
           }
         }
@@ -270,7 +285,7 @@ public class TreeTable extends JBTable {
     }
 
     /**
-     * If <code>updatingListSelectionModel</code> is false, this will
+     * If {@code updatingListSelectionModel} is false, this will
      * reset the selected paths from the selected rows in the list
      * selection model.
      */
@@ -285,7 +300,7 @@ public class TreeTable extends JBTable {
 
           clearSelection();
           if (min != -1 && max != -1) {
-            List<TreePath> selectionPaths = new ArrayList<TreePath>();
+            List<TreePath> selectionPaths = new ArrayList<>();
             for (int counter = min; counter <= max; counter++) {
               if (listSelectionModel.isSelectedIndex(counter)) {
                 TreePath selPath = myTree.getPathForRow(counter);
@@ -296,7 +311,7 @@ public class TreeTable extends JBTable {
               }
             }
             if (!selectionPaths.isEmpty()) {
-              addSelectionPaths(selectionPaths.toArray(new TreePath[selectionPaths.size()]));
+              addSelectionPaths(selectionPaths.toArray(TreeUtil.EMPTY_TREE_PATH));
             }
           }
         }
@@ -308,15 +323,17 @@ public class TreeTable extends JBTable {
 
     /**
      * Class responsible for calling updateSelectedPathsFromSelectedRows
-     * when the selection of the list changse.
+     * when the selection of the list change.
      */
     class ListSelectionHandler implements ListSelectionListener {
+      @Override
       public void valueChanged(ListSelectionEvent e) {
         updateSelectedPathsFromSelectedRows();
       }
     }
   }
 
+  @Override
   public boolean editCellAt(int row, int column, EventObject e) {
     boolean editResult = super.editCellAt(row, column, e);
     if (e instanceof MouseEvent && isTreeColumn(column)){
@@ -341,7 +358,7 @@ public class TreeTable extends JBTable {
       // Some LAFs, for example, Aqua under MAC OS X
       // expand tree node by MOUSE_RELEASED event. Unfortunately,
       // it's not possible to find easy way to wedge in table's
-      // event sequense. Therefore we send "synthetic" release event.
+      // event sequence. Therefore we send "synthetic" release event.
       if (newEvent.getID()==MouseEvent.MOUSE_PRESSED) {
         MouseEvent newME2 = new MouseEvent(
           myTree,
@@ -353,11 +370,11 @@ public class TreeTable extends JBTable {
         );
         myTree.dispatchEvent(newME2);
       }
-    }    
+    }
     return editResult;
   }
 
-  private boolean isTreeColumn(int column) {
+  protected boolean isTreeColumn(int column) {
     return TreeTableModel.class.isAssignableFrom(getColumnClass(column));
   }
 
