@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.java.decompiler.struct.consts;
 
 import org.jetbrains.java.decompiler.code.CodeConstants;
@@ -27,20 +13,21 @@ import org.jetbrains.java.decompiler.util.DataInputFullStream;
 import java.io.DataInputStream;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.BitSet;
 import java.util.List;
 
+@SuppressWarnings("AssignmentToForLoopParameter")
 public class ConstantPool implements NewClassNameBuilder {
-
   public static final int FIELD = 1;
   public static final int METHOD = 2;
 
-  private final List<PooledConstant> pool = new ArrayList<PooledConstant>();
+  private final List<PooledConstant> pool;
   private final PoolInterceptor interceptor;
-
 
   public ConstantPool(DataInputStream in) throws IOException {
     int size = in.readUnsignedShort();
-    int[] pass = new int[size];
+    pool = new ArrayList<>(size);
+    BitSet[] nextPass = {new BitSet(size), new BitSet(size), new BitSet(size)};
 
     // first dummy constant
     pool.add(null);
@@ -53,54 +40,61 @@ public class ConstantPool implements NewClassNameBuilder {
         case CodeConstants.CONSTANT_Utf8:
           pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Utf8, in.readUTF()));
           break;
+
         case CodeConstants.CONSTANT_Integer:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Integer, new Integer(in.readInt())));
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Integer, Integer.valueOf(in.readInt())));
           break;
+
         case CodeConstants.CONSTANT_Float:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Float, new Float(in.readFloat())));
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Float, in.readFloat()));
           break;
+
         case CodeConstants.CONSTANT_Long:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Long, new Long(in.readLong())));
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Long, in.readLong()));
           pool.add(null);
           i++;
           break;
+
         case CodeConstants.CONSTANT_Double:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Double, new Double(in.readDouble())));
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Double, in.readDouble()));
           pool.add(null);
           i++;
           break;
+
         case CodeConstants.CONSTANT_Class:
         case CodeConstants.CONSTANT_String:
         case CodeConstants.CONSTANT_MethodType:
+        case CodeConstants.CONSTANT_Module:
+        case CodeConstants.CONSTANT_Package:
           pool.add(new PrimitiveConstant(tag, in.readUnsignedShort()));
-          pass[i] = 1;
+          nextPass[0].set(i);
           break;
+
+        case CodeConstants.CONSTANT_NameAndType:
+          pool.add(new LinkConstant(tag, in.readUnsignedShort(), in.readUnsignedShort()));
+          nextPass[0].set(i);
+          break;
+
         case CodeConstants.CONSTANT_Fieldref:
         case CodeConstants.CONSTANT_Methodref:
         case CodeConstants.CONSTANT_InterfaceMethodref:
-        case CodeConstants.CONSTANT_NameAndType:
         case CodeConstants.CONSTANT_InvokeDynamic:
           pool.add(new LinkConstant(tag, in.readUnsignedShort(), in.readUnsignedShort()));
-          if (tag == CodeConstants.CONSTANT_NameAndType) {
-            pass[i] = 1;
-          }
-          else {
-            pass[i] = 2;
-          }
+          nextPass[1].set(i);
           break;
+
         case CodeConstants.CONSTANT_MethodHandle:
           pool.add(new LinkConstant(tag, in.readUnsignedByte(), in.readUnsignedShort()));
-          pass[i] = 3;
+          nextPass[2].set(i);
           break;
       }
     }
 
     // resolving complex pool elements
-    for (int passIndex = 1; passIndex <= 3; passIndex++) {
-      for (int i = 1; i < size; i++) {
-        if (pass[i] == passIndex) {
-          pool.get(i).resolveConstant(this);
-        }
+    for (BitSet pass : nextPass) {
+      int idx = 0;
+      while ((idx = pass.nextSetBit(idx + 1)) > 0) {
+        pool.get(idx).resolveConstant(this);
       }
     }
 
@@ -116,6 +110,7 @@ public class ConstantPool implements NewClassNameBuilder {
         case CodeConstants.CONSTANT_Utf8:
           in.readUTF();
           break;
+
         case CodeConstants.CONSTANT_Integer:
         case CodeConstants.CONSTANT_Float:
         case CodeConstants.CONSTANT_Fieldref:
@@ -125,24 +120,23 @@ public class ConstantPool implements NewClassNameBuilder {
         case CodeConstants.CONSTANT_InvokeDynamic:
           in.discard(4);
           break;
+
         case CodeConstants.CONSTANT_Long:
         case CodeConstants.CONSTANT_Double:
           in.discard(8);
           i++;
           break;
+
         case CodeConstants.CONSTANT_Class:
         case CodeConstants.CONSTANT_String:
         case CodeConstants.CONSTANT_MethodType:
           in.discard(2);
           break;
+
         case CodeConstants.CONSTANT_MethodHandle:
           in.discard(3);
       }
     }
-  }
-
-  public int size() {
-    return pool.size();
   }
 
   public String[] getClassElement(int elementType, String className, int nameIndex, int descriptorIndex) {
@@ -150,7 +144,12 @@ public class ConstantPool implements NewClassNameBuilder {
     String descriptor = ((PrimitiveConstant)getConstant(descriptorIndex)).getString();
 
     if (interceptor != null) {
-      String newElement = interceptor.getName(className + " " + elementName + " " + descriptor);
+      String oldClassName = interceptor.getOldName(className);
+      if (oldClassName != null) {
+        className = oldClassName;
+      }
+
+      String newElement = interceptor.getName(className + ' ' + elementName + ' ' + descriptor);
       if (newElement != null) {
         elementName = newElement.split(" ")[1];
       }
@@ -191,9 +190,10 @@ public class ConstantPool implements NewClassNameBuilder {
          ln.type == CodeConstants.CONSTANT_Methodref ||
          ln.type == CodeConstants.CONSTANT_InterfaceMethodref)) {
       String newClassName = buildNewClassname(ln.classname);
-      String newElement = interceptor.getName(ln.classname + " " + ln.elementname + " " + ln.descriptor);
+      String newElement = interceptor.getName(ln.classname + ' ' + ln.elementname + ' ' + ln.descriptor);
       String newDescriptor = buildNewDescriptor(ln.type == CodeConstants.CONSTANT_Fieldref, ln.descriptor);
-
+      //TODO: Fix newElement being null caused by ln.classname being a leaf class instead of the class that declared the field/method.
+      //See the comments of IDEA-137253 for more information.
       if (newClassName != null || newElement != null || newDescriptor != null) {
         String className = newClassName == null ? ln.classname : newClassName;
         String elementName = newElement == null ? ln.elementname : newElement.split(" ")[1];
@@ -212,18 +212,12 @@ public class ConstantPool implements NewClassNameBuilder {
     String newName = interceptor.getName(vt.value);
     if (newName != null) {
       StringBuilder buffer = new StringBuilder();
-
       if (vt.arrayDim > 0) {
-        for (int i = 0; i < vt.arrayDim; i++) {
-          buffer.append("[");
-        }
-
-        buffer.append("L").append(newName).append(";");
+        buffer.append("[".repeat(vt.arrayDim)).append('L').append(newName).append(';');
       }
       else {
         buffer.append(newName);
       }
-
       return buffer.toString();
     }
 
