@@ -1,39 +1,24 @@
-/*
- * Copyright 2000-2013 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.javaFX.fxml;
 
+import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-/**
- * User: anna
- * Date: 1/14/13
- */
-public class FxmlConstants {
+public final class FxmlConstants {
   @NonNls public static final String FX_CONTROLLER = "fx:controller";
   @NonNls public static final String FX_ID = "fx:id";
   @NonNls public static final String VALUE = "value";
   @NonNls public static final String FX_VALUE = "fx:value";
   @NonNls public static final String FX_FACTORY = "fx:factory";
   @NonNls public static final String FX_CONSTANT = "fx:constant";
-  
+
   @NonNls public static final String FX_REFERENCE = "fx:reference";
   @NonNls public static final String FX_COPY = "fx:copy";
   @NonNls public static final String FX_DEFINE = "fx:define";
@@ -43,31 +28,35 @@ public class FxmlConstants {
   @NonNls public static final String TYPE = "type";
   @NonNls public static final String RESOURCES = "resources";
   @NonNls public static final String CHARSET = "charset";
+  @NonNls public static final String CONTROLLER = "controller";
+  @NonNls public static final String CONTROLLER_SUFFIX = "Controller";
 
   @NonNls public static final String STYLE_CLASS = "styleClass";
   @NonNls public static final String STYLESHEETS = "stylesheets";
+  @NonNls public static final String URL_ATTR = "url";
+  @NonNls public static final String URL_TAG = "URL";
 
-  public static final List<String> FX_DEFAULT_PROPERTIES = Arrays.asList(FX_ID, FX_CONTROLLER, VALUE, FX_VALUE, FX_FACTORY, FX_CONSTANT);
-  public static final List<String> FX_DEFAULT_ELEMENTS = Arrays.asList(FX_INCLUDE, FX_REFERENCE, FX_COPY, FX_DEFINE, FX_SCRIPT, FX_ROOT);
+  @NonNls public static final String SOURCE = "source";
 
-  public static final String FX_ELEMENT_SOURCE = "source";
+  @NonNls public static final String NULL_EXPRESSION = "${null}";
+  @NonNls private static final String NULL_VALUE = "$null";
 
-  public static final Map<String, List<String>> FX_ELEMENT_ATTRIBUTES = new HashMap<String, List<String>>();
-  static {
-    FX_ELEMENT_ATTRIBUTES.put(FX_INCLUDE, Arrays.asList(FX_ELEMENT_SOURCE, FX_ID, RESOURCES, CHARSET));
-    FX_ELEMENT_ATTRIBUTES.put(FX_REFERENCE, Arrays.asList(FX_ELEMENT_SOURCE));
-    FX_ELEMENT_ATTRIBUTES.put(FX_COPY, Arrays.asList(FX_ELEMENT_SOURCE));
-    FX_ELEMENT_ATTRIBUTES.put(FX_SCRIPT, Arrays.asList(FX_ELEMENT_SOURCE));
-    FX_ELEMENT_ATTRIBUTES.put(FX_ROOT, Arrays.asList(TYPE));
+  public static final Set<String> FX_BUILT_IN_ATTRIBUTES = Set.of(FX_ID, FX_CONTROLLER, VALUE, FX_VALUE, FX_FACTORY, FX_CONSTANT);
+
+  public static final Set<String> FX_BUILT_IN_TAGS = Set.of(FX_INCLUDE, FX_REFERENCE, FX_COPY, FX_DEFINE, FX_SCRIPT);
+
+  public static final Map<String, List<String>> FX_BUILT_IN_TAG_SUPPORTED_ATTRIBUTES =
+    Map.of(FX_INCLUDE, List.of(SOURCE, FX_ID, RESOURCES, CHARSET),
+           FX_REFERENCE, List.of(SOURCE),
+           FX_COPY, List.of(SOURCE),
+           FX_SCRIPT, List.of(SOURCE));
+
+  public static final Map<String, List<String>> FX_BUILT_IN_TAG_REQUIRED_ATTRIBUTES =
+    Map.of(FX_INCLUDE, List.of(SOURCE),
+           FX_REFERENCE, List.of(SOURCE),
+           FX_COPY, List.of(SOURCE));
+
+  public static boolean isNullValue(@NotNull String value) {
+    return NULL_VALUE.equals(StringUtil.trimTrailing(value));
   }
-
-  public static final Map<String, List<String>> FX_REQUIRED_ELEMENT_ATTRIBUTES = new HashMap<String, List<String>>();
-
-  static {
-    FX_REQUIRED_ELEMENT_ATTRIBUTES.put(FX_INCLUDE, Arrays.asList(FX_ELEMENT_SOURCE));
-    FX_REQUIRED_ELEMENT_ATTRIBUTES.put(FX_REFERENCE, Arrays.asList(FX_ELEMENT_SOURCE));
-    FX_REQUIRED_ELEMENT_ATTRIBUTES.put(FX_COPY, Arrays.asList(FX_ELEMENT_SOURCE));
-    FX_REQUIRED_ELEMENT_ATTRIBUTES.put(FX_ROOT, Arrays.asList(TYPE));
-  }
-
 }
