@@ -16,43 +16,37 @@
 package com.intellij.junit3;
 
 import com.intellij.rt.execution.junit.*;
-import com.intellij.rt.execution.junit.segments.OutputObjectRegistry;
-import com.intellij.rt.execution.junit.segments.PacketProcessor;
-import jetbrains.buildServer.messages.serviceMessages.ServiceMessage;
-import jetbrains.buildServer.messages.serviceMessages.ServiceMessageTypes;
+import com.intellij.rt.junit.DeafStream;
+import com.intellij.rt.junit.IdeaTestRunner;
 import junit.framework.*;
 import junit.textui.ResultPrinter;
 import junit.textui.TestRunner;
 
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.util.*;
 
-public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
-  private TestListener myTestsListener;
-  private JUnit3OutputObjectRegistry myRegistry;
-  private ArrayList myListeners;
-  private boolean mySendTree;
+public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner<Test> {
+  private SMTestListener myTestsListener;
+  private ArrayList<String> myListeners;
 
   public JUnit3IdeaTestRunner() {
     super(DeafStream.DEAF_PRINT_STREAM);
   }
 
-  public int startRunnerWithArgs(String[] args, ArrayList listeners, String name, int count, boolean sendTree) {
+  @Override
+  public void createListeners(ArrayList<String> listeners, int count) {
+    myTestsListener = new SMTestListener();
     myListeners = listeners;
-    mySendTree = sendTree && !(myTestsListener instanceof SMTestListener);
-    if (sendTree) {
-      setPrinter(new TimeSender(myRegistry));
-    }
-    else {
-      setPrinter(new MockResultPrinter());
-    }
+  }
+
+  @Override
+  public int startRunnerWithArgs(String[] args, String name, int count, boolean sendTree) {
+    setPrinter(new MockResultPrinter());
     try {
       Test suite = TestRunnerUtil.getTestSuite(this, args);
       if (suite == null) return -1;
-      TestResult result = doRun(suite);
-      if (!result.wasSuccessful()) {
-        return -1;
-      }
-      return 0;
+      return doRun(suite).wasSuccessful() ? 0 : -1;
     }
     catch (Exception e) {
       e.printStackTrace(System.err);
@@ -60,64 +54,61 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
     }
   }
 
+  @Override
   public void clearStatus() {
     super.clearStatus();
   }
 
+  @Override
   public void runFailed(String message) {
     super.runFailed(message);
   }
 
-  public void setStreams(Object segmentedOut, Object segmentedErr, int lastIdx) {
-    if (JUnitStarter.SM_RUNNER) {
-      myTestsListener = new SMTestListener();
-    } else {
-      myRegistry = new JUnit3OutputObjectRegistry((PacketProcessor)segmentedOut, lastIdx);
-      myTestsListener = new TestResultsSender(myRegistry);
-    }
-  }
-
-  public Object getTestToStart(String[] args, String name) {
+  @Override
+  public Test getTestToStart(String[] args, String name) {
     return TestRunnerUtil.getTestSuite(this, args);
   }
 
-  public List getChildTests(Object description) {
-    return getTestCasesOf((Test)description);
+  @Override
+  public List<Test> getChildTests(Test description) {
+    return getTestCasesOf(description);
   }
 
-  public OutputObjectRegistry getRegistry() {
-    return myRegistry;
-  }
-
-  public String getTestClassName(Object child) {
+  @Override
+  public String getTestClassName(Test child) {
     return child instanceof TestSuite ? ((TestSuite)child).getName() : child.getClass().getName();
   }
 
-  public String getStartDescription(Object child) {
-    final Test test = (Test)child;
-    if (test instanceof TestCase) {
-      return test.getClass().getName() + "," + ((TestCase)test).getName();
+  @Override
+  public String getStartDescription(Test child) {
+    if (child instanceof TestCase) {
+      return child.getClass().getName() + "," + ((TestCase)child).getName();
     }
-    return test.toString();
+    return child.toString();
   }
 
+  @Override
   protected TestResult createTestResult() {
     TestResult testResult = super.createTestResult();
     testResult.addListener(myTestsListener);
     try {
-      for (int i = 0; i < myListeners.size(); i++) {
-        final IDEAJUnitListener junitListener = (IDEAJUnitListener)Class.forName((String)myListeners.get(i)).newInstance();
+      for (String listener : myListeners) {
+        final IDEAJUnitListener junitListener = Class.forName(listener).asSubclass(IDEAJUnitListener.class).getConstructor().newInstance();
         testResult.addListener(new TestListener() {
+          @Override
           public void addError(Test test, Throwable t) {}
 
+          @Override
           public void addFailure(Test test, AssertionFailedError t) {}
 
+          @Override
           public void endTest(Test test) {
             if (test instanceof TestCase) {
               junitListener.testFinished(test.getClass().getName(), ((TestCase)test).getName());
             }
           }
 
+          @Override
           public void startTest(Test test) {
             if (test instanceof TestCase) {
               junitListener.testStarted(test.getClass().getName(), ((TestCase)test).getName());
@@ -132,34 +123,26 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
     return testResult;
   }
 
+  @Override
   public TestResult doRun(Test suite, boolean wait) {  //todo
-    try {
-      TreeSender.sendTree(this, suite, mySendTree);
-    }
-    catch (Exception e) {
-      //noinspection HardCodedStringLiteral
-      System.err.println("Internal Error occured.");
-      e.printStackTrace(System.err);
-    }
     final TestResult testResult = super.doRun(suite, wait);
-    if (myTestsListener instanceof SMTestListener) {
-      ((SMTestListener)myTestsListener).finishSuite();
-    }
+    myTestsListener.finishSuite();
+
     return testResult;
   }
 
-  static Vector getTestCasesOf(Test test) {
-    Vector testCases = new Vector();
+  static List<Test> getTestCasesOf(Test test) {
+    List<Test> testCases = new ArrayList<Test>();
     if (test instanceof TestRunnerUtil.SuiteMethodWrapper) {
       test = ((TestRunnerUtil.SuiteMethodWrapper)test).getSuite();
     }
     if (test instanceof TestSuite) {
       TestSuite testSuite = (TestSuite)test;
 
-      for (Enumeration each = testSuite.tests(); each.hasMoreElements();) {
-        Object childTest = each.nextElement();
+      for (Enumeration<Test> each = testSuite.tests(); each.hasMoreElements();) {
+        Test childTest = each.nextElement();
         if (childTest instanceof TestSuite && !((TestSuite)childTest).tests().hasMoreElements()) continue;
-        testCases.addElement(childTest);
+        testCases.add(childTest);
       }
     }
     return testCases;
@@ -173,15 +156,51 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
 
   private static class SMTestListener implements TestListener {
     private String myClassName;
-    
+    private long myCurrentTestStart;
+
+    @Override
     public void addError(Test test, Throwable e) {
-      final String failureMessage = e.getMessage();
-      final Map attrs = new HashMap();
-      attrs.put("name", getMethodName(test));
-      attrs.put("message", failureMessage != null ? failureMessage : "");
-      System.out.println(ServiceMessage.asString(ServiceMessageTypes.TEST_FAILED, attrs));
+      testFailure(e, MapSerializerUtil.TEST_FAILED, getMethodName(test));
     }
 
+    private void testFailure(Throwable failure, String messageName, String methodName) {
+      final Map<String, String> attrs = new HashMap<String, String>();
+      attrs.put("name", methodName);
+      final long duration = System.currentTimeMillis() - myCurrentTestStart;
+      if (duration > 0) {
+        attrs.put("duration", Long.toString(duration));
+      }
+      try {
+        final String trace = getTrace(failure);
+        ComparisonFailureData notification = null;
+        if (failure instanceof FileComparisonFailure) {
+          final FileComparisonFailure comparisonFailure = (FileComparisonFailure)failure;
+          notification = new ComparisonFailureData(comparisonFailure.getExpected(), comparisonFailure.getActual(), 
+                                                   comparisonFailure.getFilePath(), comparisonFailure.getActualFilePath());
+        }
+        else if (failure instanceof ComparisonFailure || failure.getClass().getName().equals("org.junit.ComparisonFailure")) {
+          notification = new ComparisonFailureData(ComparisonDetailsExtractor.getExpected(failure), ComparisonDetailsExtractor.getActual(failure));
+        }
+        ComparisonFailureData.registerSMAttributes(notification, trace, failure.getMessage(), attrs, failure);
+      }
+      catch (Throwable e) {
+        final StringWriter stringWriter = new StringWriter();
+        final PrintWriter writer = new PrintWriter(stringWriter);
+        e.printStackTrace(writer);
+        ComparisonFailureData.registerSMAttributes(null, stringWriter.toString(), e.getMessage(), attrs, e);
+      }
+      finally {
+        System.out.println("\n" + MapSerializerUtil.asString(messageName, attrs));
+      }
+    }
+
+    public String getTrace(Throwable failure) {
+      StringWriter stringWriter = new StringWriter();
+      PrintWriter writer = new PrintWriter(stringWriter);
+      failure.printStackTrace(writer);
+      return stringWriter.toString();
+    }
+    
     private static String getMethodName(Test test) {
       final String toString = test.toString();
       final int braceIdx = toString.indexOf("(");
@@ -194,29 +213,41 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
       return braceIdx > 0 && toString.endsWith(")") ? toString.substring(braceIdx + 1, toString.length() - 1) : null;
     }
 
+    @Override
     public void addFailure(Test test, AssertionFailedError e) {
       addError(test, e);
     }
 
+    @Override
     public void endTest(Test test) {
-      System.out.println("\n##teamcity[testFinished name=\'" + getMethodName(test) + "\']");
+      final long duration = System.currentTimeMillis() - myCurrentTestStart;
+      System.out.println("\n##teamcity[testFinished name='" + escapeName(getMethodName(test)) +
+                         (duration > 0 ? "' duration='" + duration : "") + "']");
     }
 
+    @Override
     public void startTest(Test test) {
+      myCurrentTestStart = System.currentTimeMillis();
       final String className = getClassName(test);
       if (className != null && !className.equals(myClassName)) {
         finishSuite();
         myClassName = className;
-        System.out.println("##teamcity[testSuiteStarted name =\'" + myClassName + "\' locationHint=\'java:suite://" + className + "\']");
+        System.out.println("##teamcity[testSuiteStarted name ='" + escapeName(myClassName) +
+                           "' locationHint='java:suite://" + escapeName(className) + "']");
       }
       final String methodName = getMethodName(test);
-      System.out.println("##teamcity[testStarted name=\'" + methodName + "\' locationHint=\'java:test://" + className + "." + methodName + "\']");
+      System.out.println("##teamcity[testStarted name='" + escapeName(methodName) +
+                         "' locationHint='java:test://" + escapeName(className + "/" + methodName) + "']");
     }
 
     protected void finishSuite() {
       if (myClassName != null) {
-        System.out.println("##teamcity[testSuiteFinished name=\'" + myClassName + "\']");
+        System.out.println("##teamcity[testSuiteFinished name='" + escapeName(myClassName) + "']");
       }
+    }
+
+    private static String escapeName(String str) {
+      return MapSerializerUtil.escapeStr(str, MapSerializerUtil.STD_ESCAPER);
     }
   }
 }
