@@ -1,30 +1,15 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.jetbrains.python.refactoring.extractmethod;
 
 import com.intellij.codeInsight.CodeInsightUtilCore;
 import com.intellij.codeInsight.codeFragment.CodeFragment;
 import com.intellij.lang.LanguageNamesValidation;
-import com.intellij.lang.refactoring.NamesValidator;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Messages;
-import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.text.StringUtil;
@@ -37,13 +22,13 @@ import com.intellij.refactoring.listeners.RefactoringElementListenerComposite;
 import com.intellij.refactoring.listeners.RefactoringEventData;
 import com.intellij.refactoring.listeners.RefactoringEventListener;
 import com.intellij.refactoring.rename.RenameUtil;
+import com.intellij.refactoring.util.AbstractVariableData;
 import com.intellij.refactoring.util.CommonRefactoringUtil;
 import com.intellij.usageView.UsageInfo;
-import com.intellij.util.Consumer;
+import com.intellij.util.ArrayUtilRt;
 import com.intellij.util.Function;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.containers.hash.HashMap;
 import com.jetbrains.python.PyBundle;
 import com.jetbrains.python.PyNames;
 import com.jetbrains.python.PythonFileType;
@@ -62,10 +47,7 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
-/**
- * @author oleg
- */
-public class PyExtractMethodUtil {
+public final class PyExtractMethodUtil {
   public static final String NAME = "extract.method.name";
 
   private PyExtractMethodUtil() {
@@ -89,7 +71,7 @@ public class PyExtractMethodUtil {
     final boolean isStaticMethod = flags != null && flags.isStaticMethod();
 
     // collect statements
-    final List<PsiElement> elementsRange = PyPsiUtils.collectElements(statement1, statement2);
+    final List<PsiElement> elementsRange = PsiTreeUtil.getElementsOfRange(statement1, statement2);
     if (elementsRange.isEmpty()) {
       CommonRefactoringUtil.showErrorHint(project, editor,
                                           PyBundle.message("refactoring.extract.method.error.empty.fragment"),
@@ -105,110 +87,129 @@ public class PyExtractMethodUtil {
     final String methodName = data.first;
     final AbstractVariableData[] variableData = data.second;
 
-    final SimpleDuplicatesFinder finder = new SimpleDuplicatesFinder(statement1, statement2, variableData, fragment.getOutputVariables());
+    final SimpleDuplicatesFinder finder = new SimpleDuplicatesFinder(statement1, statement2, fragment.getOutputVariables(), variableData);
 
-    CommandProcessor.getInstance().executeCommand(project, new Runnable() {
-      public void run() {
-        ApplicationManager.getApplication().runWriteAction(new Runnable() {
-          public void run() {
-            final RefactoringEventData beforeData = new RefactoringEventData();
-            beforeData.addElements(new PsiElement[]{statement1, statement2});
-            project.getMessageBus().syncPublisher(RefactoringEventListener.REFACTORING_EVENT_TOPIC)
-              .refactoringStarted(getRefactoringId(), beforeData);
+    CommandProcessor.getInstance().executeCommand(project, () ->  {
+      final RefactoringEventData beforeData = new RefactoringEventData();
+      beforeData.addElements(new PsiElement[]{statement1, statement2});
+      project.getMessageBus().syncPublisher(RefactoringEventListener.REFACTORING_EVENT_TOPIC)
+        .refactoringStarted(getRefactoringId(), beforeData);
 
-            final StringBuilder builder = new StringBuilder();
-            final List<PsiElement> newMethodElements = new ArrayList<PsiElement>(elementsRange);
-            final boolean hasOutputVariables = !fragment.getOutputVariables().isEmpty();
-
-            final PyElementGenerator generator = PyElementGenerator.getInstance(project);
-            final LanguageLevel languageLevel = LanguageLevel.forElement(statement1);
-            if (hasOutputVariables) {
-              // Generate return modified variables statements
-              StringUtil.join(fragment.getOutputVariables(), ", ", builder);
-
-              final PsiElement returnStatement = generator.createFromText(languageLevel, PyElement.class, "return " + builder.toString());
-              newMethodElements.add(returnStatement);
-            }
-
-            // Generate method
-            PyFunction generatedMethod = generateMethodFromElements(project, methodName, variableData, newMethodElements, flags);
-            generatedMethod = insertGeneratedMethod(statement1, generatedMethod);
-
-            // Process parameters
-            final PsiElement firstElement = elementsRange.get(0);
-            final boolean isMethod = PyPsiUtils.isMethodContext(firstElement);
-            processParameters(project, generatedMethod, variableData, isMethod, isClassMethod, isStaticMethod);
-            processGlobalWrites(generatedMethod, fragment);
-            processNonlocalWrites(generatedMethod, fragment);
-
-            // Generate call element
-            if (hasOutputVariables) {
-              builder.append(" = ");
-            }
-            else if (fragment.isReturnInstructionInside()) {
-              builder.append("return ");
-            }
-            if (fragment.isYieldInside()) {
-              builder.append("yield from ");
-            }
-            if (isMethod) {
-              appendSelf(firstElement, builder, isStaticMethod);
-            }
-            builder.append(methodName).append("(");
-            builder.append(createCallArgsString(variableData)).append(")");
-            PsiElement callElement = generator.createFromText(languageLevel, PyElement.class, builder.toString());
-
-            // replace statements with call
-            callElement = replaceElements(elementsRange, callElement);
-            callElement = CodeInsightUtilCore.forcePsiPostprocessAndRestoreElement(callElement);
-            if (callElement != null) {
-              processDuplicates(callElement, generatedMethod, finder, editor);
-            }
-
-            // Set editor
-            setSelectionAndCaret(editor, callElement);
-
-            final RefactoringEventData afterData = new RefactoringEventData();
-            afterData.addElement(generatedMethod);
-            project.getMessageBus().syncPublisher(RefactoringEventListener.REFACTORING_EVENT_TOPIC)
-              .refactoringDone(getRefactoringId(), afterData);
-          }
-        });
+      final StringBuilder builder = new StringBuilder();
+      final boolean isAsync = fragment.isAsync();
+      if (isAsync) {
+        builder.append("async ");
       }
+      builder.append("def f():\n    ");
+      final List<PsiElement> newMethodElements = new ArrayList<>(elementsRange);
+      final boolean hasOutputVariables = !fragment.getOutputVariables().isEmpty();
+
+      final PyElementGenerator generator = PyElementGenerator.getInstance(project);
+      final LanguageLevel languageLevel = LanguageLevel.forElement(statement1);
+      if (hasOutputVariables) {
+        // Generate return modified variables statements
+        final String outputVariables = StringUtil.join(fragment.getOutputVariables(), ", ");
+        final String newMethodText = builder + "return " + outputVariables;
+        builder.append(outputVariables);
+
+        final PyFunction function1 = generator.createFromText(languageLevel, PyFunction.class, newMethodText);
+        final PsiElement returnStatement = function1.getStatementList().getStatements()[0];
+        newMethodElements.add(returnStatement);
+      }
+
+      // Generate method
+      final PyFunction generatedMethod = generateMethodFromElements(methodName, variableData, newMethodElements, flags, isAsync);
+      final PyFunction insertedMethod = WriteAction.compute(() -> insertGeneratedMethod(statement1, generatedMethod));
+
+      // Process parameters
+      final PsiElement firstElement = elementsRange.get(0);
+      final boolean isMethod = PyPsiUtils.isMethodContext(firstElement);
+      WriteAction.run(() -> {
+        processParameters(project, insertedMethod, variableData, isMethod, isClassMethod, isStaticMethod);
+        processGlobalWrites(insertedMethod, fragment);
+        processNonlocalWrites(insertedMethod, fragment);
+      });
+
+      // Generate call element
+      if (hasOutputVariables) {
+        builder.append(" = ");
+      }
+      else if (fragment.isReturnInstructionInside()) {
+        builder.append("return ");
+      }
+      if (isAsync) {
+        builder.append("await ");
+      }
+      else if (fragment.isYieldInside()) {
+        builder.append("yield from ");
+      }
+      if (isMethod) {
+        appendSelf(firstElement, builder, isStaticMethod);
+      }
+      builder.append(methodName).append("(");
+      builder.append(createCallArgsString(variableData)).append(")");
+      final PyFunction function1 = generator.createFromText(languageLevel, PyFunction.class, builder.toString());
+      final PsiElement callElement = function1.getStatementList().getStatements()[0];
+
+      // Both statements are used in finder, so should be valid at this moment
+      PyPsiUtils.assertValid(statement1);
+      PyPsiUtils.assertValid(statement2);
+      final List<SimpleMatch> duplicates = collectDuplicates(finder, statement1, insertedMethod);
+
+      // replace statements with call
+      PsiElement insertedCallElement = WriteAction.compute(() -> replaceElements(elementsRange, callElement));
+      insertedCallElement = CodeInsightUtilCore.forcePsiPostprocessAndRestoreElement(insertedCallElement);
+
+      if (insertedCallElement != null) {
+        processDuplicates(duplicates, insertedCallElement, editor);
+      }
+
+      // Set editor
+      setSelectionAndCaret(editor, insertedCallElement);
+
+      final RefactoringEventData afterData = new RefactoringEventData();
+      afterData.addElement(insertedMethod);
+      project.getMessageBus().syncPublisher(RefactoringEventListener.REFACTORING_EVENT_TOPIC)
+        .refactoringDone(getRefactoringId(), afterData);
     }, PyBundle.message("refactoring.extract.method"), null);
   }
 
-  private static void processDuplicates(@NotNull final PsiElement callElement,
-                                        @NotNull final PyFunction generatedMethod,
-                                        @NotNull final SimpleDuplicatesFinder finder,
-                                        @NotNull final Editor editor) {
-    final ScopeOwner owner = ScopeUtil.getScopeOwner(callElement);
-    if (owner instanceof PsiFile) return;
-    final List<PsiElement> scope = new ArrayList<PsiElement>();
+  @NotNull
+  private static List<SimpleMatch> collectDuplicates(@NotNull SimpleDuplicatesFinder finder,
+                                                     @NotNull PsiElement originalScopeAnchor,
+                                                     @NotNull PyFunction generatedMethod) {
+    final List<PsiElement> scopes = collectScopes(originalScopeAnchor, generatedMethod);
+    return ExtractMethodHelper.collectDuplicates(finder, scopes, generatedMethod);
+  }
+
+  @NotNull
+  private static List<PsiElement> collectScopes(@NotNull PsiElement anchor, @NotNull PyFunction generatedMethod) {
+    final ScopeOwner owner = ScopeUtil.getScopeOwner(anchor);
+    if (owner instanceof PsiFile) return Collections.emptyList();
+    final List<PsiElement> scope = new ArrayList<>();
     if (owner instanceof PyFunction) {
       scope.add(owner);
       final PyClass containingClass = ((PyFunction)owner).getContainingClass();
       if (containingClass != null) {
-        for (PyFunction function : containingClass.getMethods(false)) {
+        for (PyFunction function : containingClass.getMethods()) {
           if (!function.equals(owner) && !function.equals(generatedMethod)) {
             scope.add(function);
           }
         }
       }
     }
-    ExtractMethodHelper.processDuplicates(callElement, generatedMethod, scope, finder, editor,
-                                          new Consumer<Pair<SimpleMatch, PsiElement>>() {
-                                            @Override
-                                            public void consume(@NotNull Pair<SimpleMatch, PsiElement> pair) {
-                                              replaceElements(pair.first, pair.second.copy());
-                                            }
-                                          }
-    );
+    return scope;
+  }
+
+  private static void processDuplicates(@NotNull List<SimpleMatch> duplicates,
+                                        @NotNull PsiElement replacement,
+                                        @NotNull Editor editor) {
+    ExtractMethodHelper.replaceDuplicates(replacement, editor, pair -> replaceElements(pair.first, pair.second.copy()), duplicates);
   }
 
   private static void processGlobalWrites(@NotNull final PyFunction function, @NotNull final PyCodeFragment fragment) {
     final Set<String> globalWrites = fragment.getGlobalWrites();
-    final Set<String> newGlobalNames = new LinkedHashSet<String>();
+    final Set<String> newGlobalNames = new LinkedHashSet<>();
     final Scope scope = ControlFlowCache.getScope(function);
     for (String name : globalWrites) {
       if (!scope.isGlobal(name)) {
@@ -227,7 +228,7 @@ public class PyExtractMethodUtil {
 
   private static void processNonlocalWrites(@NotNull PyFunction function, @NotNull PyCodeFragment fragment) {
     final Set<String> nonlocalWrites = fragment.getNonlocalWrites();
-    final Set<String> newNonlocalNames = new LinkedHashSet<String>();
+    final Set<String> newNonlocalNames = new LinkedHashSet<>();
     final Scope scope = ControlFlowCache.getScope(function);
     for (String name : nonlocalWrites) {
       if (!scope.isNonlocal(name)) {
@@ -288,58 +289,66 @@ public class PyExtractMethodUtil {
     final String methodName = data.first;
     final AbstractVariableData[] variableData = data.second;
 
-    final SimpleDuplicatesFinder finder = new SimpleDuplicatesFinder(expression, expression, variableData, fragment.getOutputVariables());
+    final SimpleDuplicatesFinder finder = new SimpleDuplicatesFinder(expression, expression, fragment.getOutputVariables(), variableData);
     if (fragment.getOutputVariables().isEmpty()) {
-      CommandProcessor.getInstance().executeCommand(project, new Runnable() {
-        @Override
-        public void run() {
-          ApplicationManager.getApplication().runWriteAction(new Runnable() {
-            @Override
-            public void run() {
-              // Generate method
-              PyFunction generatedMethod = generateMethodFromExpression(project, methodName, variableData, expression, flags);
-              generatedMethod = insertGeneratedMethod(expression, generatedMethod);
+      CommandProcessor.getInstance().executeCommand(project, () -> {
+        // Generate method
+        final boolean isAsync = fragment.isAsync();
+        final PyFunction generatedMethod = generateMethodFromExpression(methodName, variableData, expression, flags, isAsync);
+        final PyFunction insertedMethod = WriteAction.compute(() -> insertGeneratedMethod(expression, generatedMethod));
 
-              // Process parameters
-              final boolean isMethod = PyPsiUtils.isMethodContext(expression);
-              processParameters(project, generatedMethod, variableData, isMethod, isClassMethod, isStaticMethod);
+        // Process parameters
+        final boolean isMethod = PyPsiUtils.isMethodContext(expression);
+        WriteAction.run(() -> processParameters(project, insertedMethod, variableData, isMethod, isClassMethod, isStaticMethod));
 
-              // Generating call element
-              final StringBuilder builder = new StringBuilder();
-              if (fragment.isYieldInside()) {
-                builder.append("yield from ");
-              }
-              else {
-                builder.append("return ");
-              }
-              if (isMethod) {
-                appendSelf(expression, builder, isStaticMethod);
-              }
-              builder.append(methodName);
-              builder.append("(").append(createCallArgsString(variableData)).append(")");
-              final PyElementGenerator generator = PyElementGenerator.getInstance(project);
-              final PyElement generated =
-                generator.createFromText(LanguageLevel.forElement(expression), PyElement.class, builder.toString());
-              PsiElement callElement = null;
-              if (generated instanceof PyReturnStatement) {
-                callElement = ((PyReturnStatement)generated).getExpression();
-              }
-              else if (generated instanceof PyExpressionStatement) {
-                callElement = ((PyExpressionStatement)generated).getExpression();
-              }
-
-              // replace statements with call
-              if (callElement != null) {
-                callElement = PyReplaceExpressionUtil.replaceExpression(expression, callElement);
-              }
-              if (callElement != null) {
-                processDuplicates(callElement, generatedMethod, finder, editor);
-              }
-              // Set editor
-              setSelectionAndCaret(editor, callElement);
-            }
-          });
+        // Generating call element
+        final StringBuilder builder = new StringBuilder();
+        if (isAsync) {
+          builder.append("async ");
         }
+        builder.append("def f():\n    ");
+        if (isAsync) {
+          builder.append("await ");
+        }
+        else if (fragment.isYieldInside()) {
+          builder.append("yield from ");
+        }
+        else {
+          builder.append("return ");
+        }
+        if (isMethod) {
+          appendSelf(expression, builder, isStaticMethod);
+        }
+        builder.append(methodName);
+        builder.append("(").append(createCallArgsString(variableData)).append(")");
+        final PyElementGenerator generator = PyElementGenerator.getInstance(project);
+        final PyFunction function1 = generator.createFromText(LanguageLevel.forElement(expression), PyFunction.class,
+                                                              builder.toString());
+        final PyElement generated = function1.getStatementList().getStatements()[0];
+        final PsiElement callElement;
+        if (generated instanceof PyReturnStatement) {
+          callElement = ((PyReturnStatement)generated).getExpression();
+        }
+        else if (generated instanceof PyExpressionStatement) {
+          callElement = ((PyExpressionStatement)generated).getExpression();
+        }
+        else {
+          callElement = null;
+        }
+
+        PyPsiUtils.assertValid(expression);
+        final List<SimpleMatch> duplicates = collectDuplicates(finder, expression, insertedMethod);
+
+        // replace statements with call
+        PsiElement insertedCallElement = null;
+        if (callElement != null) {
+          insertedCallElement = WriteAction.compute(() -> PyReplaceExpressionUtil.replaceExpression(expression, callElement));
+          if (insertedCallElement != null) {
+            processDuplicates(duplicates, insertedCallElement, editor);
+          }
+        }
+        setSelectionAndCaret(editor, insertedCallElement);
+        // Set editor
       }, PyBundle.message("refactoring.extract.method"), null);
     }
   }
@@ -363,7 +372,7 @@ public class PyExtractMethodUtil {
 
   @NotNull
   private static PsiElement replaceElements(@NotNull final SimpleMatch match, @NotNull final PsiElement element) {
-    final List<PsiElement> elementsRange = PyPsiUtils.collectElements(match.getStartElement(), match.getEndElement());
+    final List<PsiElement> elementsRange = PsiTreeUtil.getElementsOfRange(match.getStartElement(), match.getEndElement());
     final Map<String, String> changedParameters = match.getChangedParameters();
     PsiElement callElement = element;
     final PyElementGenerator generator = PyElementGenerator.getInstance(callElement.getProject());
@@ -388,9 +397,7 @@ public class PyExtractMethodUtil {
         for (PyExpression arg : argumentList.getArguments()) {
           final String argText = arg.getText();
           if (argText != null && keys.contains(argText)) {
-            arg.replace(generator.createExpressionFromText(
-              LanguageLevel.forElement(callElement),
-              changedParameters.get(argText)));
+            arg.replace(generator.createExpressionFromText(LanguageLevel.forElement(callElement), changedParameters.get(argText)));
           }
         }
       }
@@ -400,18 +407,13 @@ public class PyExtractMethodUtil {
 
   // Creates string for call
   @NotNull
-  private static String createCallArgsString(@NotNull final AbstractVariableData[] variableDatas) {
-    return StringUtil.join(ContainerUtil.mapNotNull(variableDatas, new Function<AbstractVariableData, String>() {
-      @Override
-      public String fun(AbstractVariableData data) {
-        return data.isPassAsParameter() ? data.getOriginalName() : null;
-      }
-    }), ",");
+  private static String createCallArgsString(final AbstractVariableData @NotNull [] variableDatas) {
+    return StringUtil.join(ContainerUtil.mapNotNull(variableDatas, data -> data.isPassAsParameter() ? data.getOriginalName() : null), ",");
   }
 
   private static void processParameters(@NotNull final Project project,
                                         @NotNull final PyFunction generatedMethod,
-                                        @NotNull final AbstractVariableData[] variableData,
+                                        final AbstractVariableData @NotNull [] variableData,
                                         final boolean isMethod,
                                         final boolean isClassMethod,
                                         final boolean isStaticMethod) {
@@ -421,7 +423,7 @@ public class PyExtractMethodUtil {
       final String name = parameter.getName();
       final String newName = map.get(name);
       if (name != null && newName != null && !name.equals(newName)) {
-        final Map<PsiElement, String> allRenames = new java.util.HashMap<PsiElement, String>();
+        final Map<PsiElement, String> allRenames = new java.util.HashMap<>();
         allRenames.put(parameter, newName);
         final UsageInfo[] usages = RenameUtil.findUsages(parameter, newName, false, false, allRenames);
         try {
@@ -434,7 +436,7 @@ public class PyExtractMethodUtil {
       }
     }
     // Change signature according to pass settings and
-    final PyFunctionBuilder builder = new PyFunctionBuilder("foo");
+    final PyFunctionBuilder builder = new PyFunctionBuilder("foo", generatedMethod);
     if (isClassMethod) {
       builder.parameter("cls");
     }
@@ -446,13 +448,13 @@ public class PyExtractMethodUtil {
         builder.parameter(data.getName());
       }
     }
-    final PyParameterList pyParameterList = builder.buildFunction(project, LanguageLevel.forElement(generatedMethod)).getParameterList();
+    final PyParameterList pyParameterList = builder.buildFunction().getParameterList();
     generatedMethod.getParameterList().replace(pyParameterList);
   }
 
   @NotNull
-  private static Map<String, String> createMap(@NotNull final AbstractVariableData[] variableData) {
-    final Map<String, String> map = new HashMap<String, String>();
+  private static Map<String, String> createMap(final AbstractVariableData @NotNull [] variableData) {
+    final Map<String, String> map = new HashMap<>();
     for (AbstractVariableData data : variableData) {
       map.put(data.getOriginalName(), data.getName());
     }
@@ -468,7 +470,7 @@ public class PyExtractMethodUtil {
     final PsiNamedElement parent = PsiTreeUtil.getParentOfType(anchor, PyFile.class, PyClass.class, PyFunction.class);
 
     final PsiElement result;
-    // The only safe case to insert extracted function *after* original scope owner is function.
+    // The only safe case to insert extracted function *after* the original scope owner is when it's function.
     if (parent instanceof PyFunction) {
       result = parent.getParent().addAfter(generatedMethod, parent);
     }
@@ -476,8 +478,8 @@ public class PyExtractMethodUtil {
       final PsiElement target = parent instanceof PyClass ? ((PyClass)parent).getStatementList() : parent;
       final PsiElement insertionAnchor = PyPsiUtils.getParentRightBefore(anchor, target);
       assert insertionAnchor != null;
-      final Couple<PsiComment> comments = PyPsiUtils.getPrecedingComments(insertionAnchor);
-      result = insertionAnchor.getParent().addBefore(generatedMethod, comments != null ? comments.getFirst() : insertionAnchor);
+      final List<PsiComment> comments = PyPsiUtils.getPrecedingComments(insertionAnchor);
+      result = insertionAnchor.getParent().addBefore(generatedMethod, !comments.isEmpty() ? comments.get(0) : insertionAnchor);
     }
     // to ensure correct reformatting, mark the entire method as generated
     result.accept(new PsiRecursiveElementVisitor() {
@@ -491,14 +493,16 @@ public class PyExtractMethodUtil {
   }
 
   @NotNull
-  private static PyFunction generateMethodFromExpression(@NotNull final Project project,
-                                                         @NotNull final String methodName,
-                                                         @NotNull final AbstractVariableData[] variableData,
+  private static PyFunction generateMethodFromExpression(@NotNull final String methodName,
+                                                         final AbstractVariableData @NotNull [] variableData,
                                                          @NotNull final PsiElement expression,
-                                                         @Nullable final PyUtil.MethodFlags flags) {
-    final PyFunctionBuilder builder = new PyFunctionBuilder(methodName);
+                                                         @Nullable final PyUtil.MethodFlags flags, boolean isAsync) {
+    final PyFunctionBuilder builder = new PyFunctionBuilder(methodName, expression);
     addDecorators(builder, flags);
     addFakeParameters(builder, variableData);
+    if (isAsync) {
+      builder.makeAsync();
+    }
     final String text;
     if (expression instanceof PyYieldExpression) {
       text = String.format("(%s)", expression.getText());
@@ -507,21 +511,24 @@ public class PyExtractMethodUtil {
       text = expression.getText();
     }
     builder.statement("return " + text);
-    return builder.buildFunction(project, LanguageLevel.forElement(expression));
+    return builder.buildFunction();
   }
 
   @NotNull
-  private static PyFunction generateMethodFromElements(@NotNull final Project project,
-                                                       @NotNull final String methodName,
-                                                       @NotNull final AbstractVariableData[] variableData,
+  private static PyFunction generateMethodFromElements(@NotNull final String methodName,
+                                                       final AbstractVariableData @NotNull [] variableData,
                                                        @NotNull final List<PsiElement> elementsRange,
-                                                       @Nullable PyUtil.MethodFlags flags) {
+                                                       @Nullable PyUtil.MethodFlags flags,
+                                                       boolean isAsync) {
     assert !elementsRange.isEmpty() : "Empty statements list was selected!";
 
-    final PyFunctionBuilder builder = new PyFunctionBuilder(methodName);
+    final PyFunctionBuilder builder = new PyFunctionBuilder(methodName, elementsRange.get(0));
+    if (isAsync) {
+      builder.makeAsync();
+    }
     addDecorators(builder, flags);
     addFakeParameters(builder, variableData);
-    final PyFunction method = builder.buildFunction(project, LanguageLevel.forElement(elementsRange.get(0)));
+    final PyFunction method = builder.buildFunction();
     final PyStatementList statementList = method.getStatementList();
     for (PsiElement element : elementsRange) {
       if (element instanceof PsiWhiteSpace) {
@@ -555,7 +562,7 @@ public class PyExtractMethodUtil {
     }
   }
 
-  private static void addFakeParameters(@NotNull PyFunctionBuilder builder, @NotNull AbstractVariableData[] variableData) {
+  private static void addFakeParameters(@NotNull PyFunctionBuilder builder, AbstractVariableData @NotNull [] variableData) {
     for (AbstractVariableData data : variableData) {
       builder.parameter(data.getOriginalName());
     }
@@ -583,7 +590,7 @@ public class PyExtractMethodUtil {
           throw new CommonRefactoringUtil.RefactoringErrorHintException(error);
         }
       }
-      final List<AbstractVariableData> data = new ArrayList<AbstractVariableData>();
+      final List<AbstractVariableData> data = new ArrayList<>();
       for (String in : fragment.getInputVariables()) {
         final AbstractVariableData d = new AbstractVariableData();
         d.name = in + "_new";
@@ -591,13 +598,14 @@ public class PyExtractMethodUtil {
         d.passAsParameter = true;
         data.add(d);
       }
-      return Pair.create(name, data.toArray(new AbstractVariableData[data.size()]));
+      return Pair.create(name, data.toArray(new AbstractVariableData[0]));
     }
 
     final boolean isMethod = PyPsiUtils.isMethodContext(element);
-    final ExtractMethodDecorator decorator = new ExtractMethodDecorator() {
+    final ExtractMethodDecorator<Object> decorator = new ExtractMethodDecorator<>() {
+      @Override
       @NotNull
-      public String createMethodPreview(final String methodName, @NotNull final AbstractVariableData[] variableDatas) {
+      public String createMethodSignature(@NotNull ExtractMethodSettings<Object> settings) {
         final StringBuilder builder = new StringBuilder();
         if (isClassMethod) {
           builder.append("cls");
@@ -605,7 +613,7 @@ public class PyExtractMethodUtil {
         else if (isMethod && !isStaticMethod) {
           builder.append("self");
         }
-        for (AbstractVariableData variableData : variableDatas) {
+        for (AbstractVariableData variableData : settings.getAbstractVariableData()) {
           if (variableData.passAsParameter) {
             if (builder.length() != 0) {
               builder.append(", ");
@@ -614,15 +622,16 @@ public class PyExtractMethodUtil {
           }
         }
         builder.insert(0, "(");
-        builder.insert(0, methodName);
+        builder.insert(0, settings.getMethodName());
         builder.insert(0, "def ");
         builder.append(")");
         return builder.toString();
       }
     };
 
-    final AbstractExtractMethodDialog dialog = new AbstractExtractMethodDialog(project, "method_name", fragment, validator, decorator,
-                                                                               PythonFileType.INSTANCE) {
+    final AbstractExtractMethodDialog<?> dialog = new AbstractExtractMethodDialog<>(project, "method_name", fragment,
+                                                                                    ArrayUtilRt.EMPTY_OBJECT_ARRAY, validator,
+                                                                                    decorator, PythonFileType.INSTANCE) {
       @Override
       protected String getHelpId() {
         return "python.reference.extractMethod";
@@ -635,7 +644,7 @@ public class PyExtractMethodUtil {
       return Pair.empty();
     }
 
-    return Pair.create(dialog.getMethodName(), dialog.getVariableData());
+    return Pair.create(dialog.getMethodName(), dialog.getAbstractVariableData());
   }
 
   @NotNull
@@ -648,32 +657,29 @@ public class PyExtractMethodUtil {
     private final Project myProject;
     @Nullable private final Function<String, Boolean> myFunction;
 
-    public PyExtractMethodValidator(final PsiElement element, final Project project) {
+    PyExtractMethodValidator(final PsiElement element, final Project project) {
       myElement = element;
       myProject = project;
       final ScopeOwner parent = ScopeUtil.getScopeOwner(myElement);
-      myFunction = new Function<String, Boolean>() {
-        @NotNull
-        @Override
-        public Boolean fun(String s) {
-          ScopeOwner owner = parent;
-          while (owner != null) {
-            if (owner instanceof PyClass) {
-              if (((PyClass)owner).findMethodByName(s, true) != null) {
-                return false;
-              }
-            }
-            final Scope scope = ControlFlowCache.getScope(owner);
-            if (scope.containsDeclaration(s)) {
+      myFunction = s -> {
+        ScopeOwner owner = parent;
+        while (owner != null) {
+          if (owner instanceof PyClass) {
+            if (((PyClass)owner).findMethodByName(s, true, null) != null) {
               return false;
             }
-            owner = ScopeUtil.getScopeOwner(owner);
           }
-          return true;
+          final Scope scope = ControlFlowCache.getScope(owner);
+          if (scope.containsDeclaration(s)) {
+            return false;
+          }
+          owner = ScopeUtil.getScopeOwner(owner);
         }
+        return true;
       };
     }
 
+    @Override
     @Nullable
     public String check(final String name) {
       if (myFunction != null && !myFunction.fun(name)) {
@@ -682,10 +688,9 @@ public class PyExtractMethodUtil {
       return null;
     }
 
+    @Override
     public boolean isValidName(@NotNull final String name) {
-      final NamesValidator validator = LanguageNamesValidation.INSTANCE.forLanguage(PythonLanguage.getInstance());
-      assert validator != null;
-      return validator.isIdentifier(name, myProject);
+      return LanguageNamesValidation.isIdentifier(PythonLanguage.getInstance(), name, myProject);
     }
   }
 }
